--- a/web_reset_password/public/reset-password.html
+++ b/web_reset_password/public/reset-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restablecer Contraseña</title>
+    <title>Restablecer ContraseÃ±a</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,32 +14,32 @@
                     <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
                     <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
                 </svg>
-                <h1>Restablecer Contraseña</h1>
-                <p class="subtitle">Ingresa tu nueva contraseña</p>
+                <h1>Restablecer ContraseÃ±a</h1>
+                <p class="subtitle">Ingresa tu nueva contraseÃ±a</p>
             </div>
 
             <form id="resetForm">
                 <div class="form-group">
-                    <label for="password">Nueva Contraseña</label>
+                    <label for="password">Nueva ContraseÃ±a</label>
                     <input
                         type="password"
                         id="password"
                         name="password"
                         required
                         minlength="6"
-                        placeholder="Mínimo 6 caracteres"
+                        placeholder="Mï¿½nimo 6 caracteres"
                     >
                 </div>
 
                 <div class="form-group">
-                    <label for="confirmPassword">Confirmar Contraseña</label>
+                    <label for="confirmPassword">Confirmar ContraseÃ±a</label>
                     <input
                         type="password"
                         id="confirmPassword"
                         name="confirmPassword"
                         required
                         minlength="6"
-                        placeholder="Repite tu contraseña"
+                        placeholder="Repite tu contraseï¿½a"
                     >
                 </div>
 
@@ -47,13 +47,13 @@
                 <div id="success" class="success" style="display: none;"></div>
 
                 <button type="submit" id="submitBtn" class="btn">
-                    <span id="btnText">Restablecer Contraseña</span>
+                    <span id="btnText">Restablecer ContraseÃ±a</span>
                     <span id="btnLoader" class="loader" style="display: none;"></span>
                 </button>
             </form>
 
             <div class="footer">
-                <a href="#" onclick="window.close(); return false;">Volver a la aplicación</a>
+                <a href="#" onclick="window.close(); return false;">Volver a la aplicacion</a>
             </div>
         </div>
     </div>
